# human_detection

./: README.md  package.xml  setup.cfg  setup.py
human_detection_yolov8/: human_detection_node.py
