<?xml version="1.0"?>
<package format="3">
  <name>human_detection</name>
  <version>0.1.0</version>
  <description>MoveNet-based pose estimation node for ROS 2</description>
  <maintainer email="you@example.com">Haruki Isono</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>numpy</depend>

</package>
